FIX Minimized/closed button icon now has a left border, since it is right aligned

--- a/assets/debugbar.css
+++ b/assets/debugbar.css
@@ -92,6 +92,7 @@ div.phpdebugbar-resize-handle {
 }
 
 div.phpdebugbar-closed, div.phpdebugbar-minimized{
+  border-left: 1px solid #ccc;
   border-top: 1px solid #ccc;
 }
 
